# molsturm

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  .ycm_extra_conf.py  AUTORS.md  CMakeLists.txt  README.md  gtags.conf  setup.cfg  update_from_sister_repos.sh  update_from_sisters.lib.sh
examples/: CMakeLists.txt  setup_environment.sh
examples/coulomb_sturmian/: .gitignore  find_optimal_k.py
examples/dimer_dissociation/: dissociation.py  h2.py
examples/fci/: .gitignore  be_cs_fci.py  fci_common.py  he_cs_fci.py
examples/gaussian/: .gitignore  fit_Be_cbs.py
examples/geometry_optimisation/: h2o_optimisation.py
examples/hard_coded_hf/: CMakeLists.txt  hack_guess.hh  main.cc
examples/hf/: CMakeLists.txt  main.cc  parse_args.cc  parse_args.hh  read_xyz.cc  read_xyz.hh
examples/integral_interface/: restricted_hartree_fock.py
examples/new_methods/: coupled_cluster_doubles.py
examples/posthf/: be_ccpvdz_mp2.py  be_cs_14_mp2.py
examples/pyadc/: be_ccpvdz_mp2.py  be_cs_14_mp2.py  find_pyadc.sh
examples/scf_fuzzing/: be_cs_random_guess.py
examples/single_point/: be_cs.py  be_def2_svp.py  c_cs.py  c_cs_py  water.py  water_def2_svp.py  water_sto3g.py
examples/state_interface/: coupled_cluster_doubles.py
modules/: CMakeLists.txt
src/interface/python/: CMakeLists.txt  ExcInvalidParameters.hh  HfParameters.cc  HfParameters.hh  Parameters.cc  ScfParameters.cc  ScfParameters.hh  ScfResults.hh  ScfSolutionView.cc  ScfSolutionView.hh  available_features.cc  config.hh  export_hf_results.cc  export_hf_results.hh  extract_orbital_basis.hh  hartree_fock.cc  hartree_fock.hh  integrals.cc  integrals.hh  molsturm_iface.i  parse_parameters.cc  self_consistent_field.cc  self_consistent_field.hh
src/molsturm/: CMakeLists.txt  DebugScfWrapper.hh  FockOperator.hh  GuessAlgorithms.hh  GuessLibrary.hh  IntegralOperatorBase.hh  IntegralTermContainer.hh  IopDiisScf.hh  IopDiisScfKeys.cc  IopDiisScfKeys.hh  IopPlainScf.hh  IopPlainScfKeys.cc  IopPlainScfKeys.hh  IopPlainScfSolver.hh  IopScf.hh  IopScfKeys.cc  IopScfKeys.hh  MolecularSystem.cc  MolecularSystem.hh  OverlapMatrix.hh  RestrictedClosedIntegralOperator.hh  RestrictedIntegralOperator.hh  RestrictionType.hh  ScfDebugWrapper.hh  ScfErrorLibrary.hh  ScfMsgType.hh  UnrestrictedIntegralOperator.hh  Version.cc  Version.hh  config.hh.in  energy_nuclear_repulsion.hh  read_xyz.cc  read_xyz.hh  scf_guess.cc  scf_guess.hh  units.hh  version.cc  version.hh
src/molsturm/GuessAlgorithms/: GuessAlgorithmsKeysBase.cc  GuessAlgorithmsKeysBase.hh  common.hh  guess_atomic_super.hh  guess_extended_hueckel.hh  guess_external.cc  guess_external.hh  guess_from_archived.hh  guess_hcore.cc  guess_hcore.hh  guess_loewdin.hh  guess_random.hh
src/molsturm/detail/: IopScfWrapper.hh
src/molsturm_iface/: CMakeLists.txt  HfResults.hh  Parameters.hh  available_features.hh  config.hh  export_hf_results.cc  export_hf_results.hh  hartree_fock.cc  hartree_fock.hh  molsturm.py  molsturm_iface.i  parse_parameters.cc  parse_parameters.hh
src/molsturm_iface/molsturm/: MolecularSystem.py  __init__.py  _basis.py  _constants.py  _features.py  _hartree_fock.py  _hdf5.py  _print.py  _serialisation.py  _sturmian.py  scf_guess.py  yaml_utils.py
tests/: .gitignore  CMakeLists.txt  DownloadTestData.cmake  DummyTest.cc  FunctionalityTest.cc  HfEnergyTest.cc  main.cc
tests/interface_python/: FciTestCase.py  HartreeFockTestCase.py  MP2TestCase.py  NumCompTestCase.py  data_cs_be.py  directories.py  test_FCI.py  test_GuessFromPrevious.py  test_HartreeFock.py  test_HartreeFockFull.py  test_HartreeFockHighLevelFrontend.py  test_HartreeFockInterface.py  test_MP2.py  test_Reference.py  test_Serialisation.py  test_Sturmian.py  test_System.py  test_YamlUtils.py  test_constants.py  testdata.py
tests/interface_python/refdata/: Be_321g.fci.yaml  Be_321g.hf.yaml  Be_321g.in.yaml  Be_321g.mp2.yaml  Be_cc-pvdz.hf.yaml  Be_cc-pvdz.in.yaml  Be_cc-pvdz.mp2.yaml  C_3-21g.hf.yaml  C_3-21g.in.yaml  C_3-21g.mp2.yaml  He_aug-cc-pvdz.fci.yaml  He_aug-cc-pvdz.hf.yaml  He_aug-cc-pvdz.in.yaml  He_aug-cc-pvdz.mp2.yaml  Li_3-21g.hf.yaml  Li_3-21g.in.yaml  Li_3-21g.mp2.yaml  README.md  ethane_321g.hf.yaml  ethane_321g.in.yaml  ethane_321g.mp2.yaml  generate_refdata.py  h2o_321g.hf.yaml  h2o_321g.in.yaml  h2o_321g.mp2.yaml  h2o_sto3g.hf.yaml  h2o_sto3g.in.yaml  h2o_sto3g.mp2.yaml
tests/interface_python/testdata/: README.md  be_ccpvdz.hf.hdf5.sha256  be_ccpvdz.in.yaml  be_ccpvqz.hf.hdf5.sha256  be_ccpvqz.in.yaml  be_ccpvtz.hf.hdf5.sha256  be_ccpvtz.in.yaml  be_cs21.fci.yaml  be_cs21.hf.hdf5  be_cs21.in.yaml  be_cs21.mp2.yaml  be_cs32.hf.yaml  be_cs32.in.yaml  be_cs41.hf.yaml  be_cs41.in.yaml  be_sto3g.hf.yaml  be_sto3g.in.yaml  c_321g.hf.hdf5  c_321g.in.yaml  c_321g.mp2.yaml  c_cs41.hf.yaml  c_cs41.in.yaml  c_sto3g.hf.yaml  c_sto3g.in.yaml  c_sto3g.mp2.yaml  generate_testdata.py  he_cs60.hf.yaml  he_cs60.in.yaml  li_cs21.hf.hdf5  li_cs21.in.yaml  li_cs21.mp2.yaml
tests/molsturm_iface_tests/: FciTestCase.py  HartreeFockTestCase.py  NumCompTestCase.py  data_cs_be.py  data_energies.py  data_hf_energies.py  test_Energies.py  test_FCI.py  test_GuessFromPrevious.py  test_HartreeFock.py  test_HartreeFockEnergies.py  test_HartreeFockFull.py  test_MP2.py  test_MolecularSystem.py  test_Reference.py  test_Serialisation.py  test_constants.py  testdata.py
tests/molsturm_iface_tests/refdata/: Be_321g.fci.yaml  Be_321g.hf.yaml  Be_321g.in.yaml  Be_321g.mp2.yaml  Be_cc-pvdz.hf.yaml  Be_cc-pvdz.in.yaml  Be_cc-pvdz.mp2.yaml  C_3-21g.hf.yaml  C_3-21g.in.yaml  C_3-21g.mp2.yaml  He_aug-cc-pvdz.fci.yaml  He_aug-cc-pvdz.hf.yaml  He_aug-cc-pvdz.in.yaml  He_aug-cc-pvdz.mp2.yaml  Li_3-21g.hf.yaml  Li_3-21g.in.yaml  Li_3-21g.mp2.yaml  ethane_321g.hf.yaml  ethane_321g.in.yaml  ethane_321g.mp2.yaml  generate_refdata.py  h2o_321g.hf.yaml  h2o_321g.in.yaml  h2o_321g.mp2.yaml  h2o_sto3g.hf.yaml  h2o_sto3g.in.yaml  h2o_sto3g.mp2.yaml
tests/molsturm_iface_tests/testdata/: be_cs21.fci.yaml  be_cs21.hf.hdf5  be_cs21.in.yaml  be_cs21.mp2.yaml  be_cs32.hf.yaml  (+20 more)
tests/reference_calulations/: README.md
(+138 files in other folders)
